# template

./: .pre-commit-config.yaml  Pipfile  pyproject.toml
.github/workflows/: pre-commit.yml
